<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/device_name"
        android:hint="@string/device_name"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/device_number"
        android:hint="@string/device_number"
        android:inputType="number"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/device_password"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/temperature_limit_settings"
        android:id="@+id/temperature_hint"
        android:gravity="center"
        android:singleLine="false"
        android:background="#50FFFFFF"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/device_temp_limit"
            android:layout_gravity="left|center_vertical"
            android:hint="@string/temper_limit"
            android:inputType="number|numberDecimal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/grad"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal|bottom"
            android:gravity="center"
            android:textAppearance="@android:style/TextAppearance.Medium"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/device_mode"
            android:checkedButton="@+id/mode0_radio">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mode_0"
                android:id="@+id/mode0_radio"
                android:layout_gravity="center_vertical|right"
                android:checked="false"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mode_1"
                android:id="@+id/mode1_radio"
                android:layout_gravity="center_vertical|right"
                android:checked="false"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tmin_hint"
                android:id="@+id/tmin_hint"
                android:gravity="center"
                android:background="#50FFFFFF"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/device_tmin"
                android:inputType="number|numberDecimal|numberSigned"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tmax_hint"
                android:id="@+id/tmax_hint"
                android:gravity="center"
                android:background="#50FFFFFF"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/device_tmax"
                android:inputType="number|numberDecimal|numberSigned"/>
        </LinearLayout>
    </LinearLayout>

    <ToggleButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sms_send_toggle"
        android:textOn="@string/send_notify_sms"
        android:textOff="@string/not_send_notify_sms"
        android:singleLine="false"
        android:checked="true"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        android:id="@+id/device_apply"/>

</LinearLayout>