<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/notify_enable"
            android:id="@+id/signal_on_button"
            android:layout_weight="1"
            android:layout_gravity="center"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/notify_disable"
            android:id="@+id/signal_off_button"
            android:layout_weight="1"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="true">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/Relay_1_enable"
            android:id="@+id/relay1_on_button"
            android:layout_weight="1"
            android:layout_gravity="center"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/Relay_1_disable"
            android:id="@+id/relay1_off_button"
            android:layout_weight="1"
            android:layout_gravity="center"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/Relay_2_enable"
            android:id="@+id/relay2_on_button"
            android:layout_weight="1"
            android:layout_gravity="center"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/Relay_2_disable"
            android:id="@+id/relay2_off_button"
            android:layout_weight="1"
            android:layout_gravity="center"/>

    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_data"
        android:id="@+id/get_data_button"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_temperature"
        android:id="@+id/get_temperature_button"
        android:layout_gravity="center"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:fillViewport="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/result_text"
            android:enabled="false"
            android:gravity="top"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            />
    </ScrollView>

</LinearLayout>

