<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent" android:layout_width="match_parent">

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/border">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="6"
                android:id="@+id/time_to_arm_edit"
                android:hint="@string/from_0_to_255"
                android:layout_marginRight="20dp"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/time_to_arm"
                android:id="@+id/time_to_arm_label"
                android:gravity="center"
                android:layout_gravity="center"/>
        </LinearLayout>

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/manage_input_group"
            android:layout_margin="10dp"
            android:background="@drawable/border">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/manage_input"
                android:id="@+id/manage_input_label"
                android:layout_gravity="center_horizontal" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ibutton"
                android:id="@+id/manage_input_1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button"
                android:id="@+id/manage_input_2" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tumbler"
                android:id="@+id/manage_input_3" />
        </RadioGroup>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/border">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/on_power_loss"
                android:id="@+id/textView"
                android:layout_gravity="center_horizontal"
                android:singleLine="false" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_sms"
                android:id="@+id/sms_send_check" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="6"
                    android:id="@+id/time_to_send_edit"
                    android:hint="@string/from_0_to_255"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/time_to_send"
                    android:id="@+id/time_to_send_label"
                    android:gravity="center"
                    android:singleLine="false"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sms_at_group"
            android:layout_margin="10dp"
            android:background="@drawable/border"
            android:orientation="vertical">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sms_at_arm"
                android:id="@+id/sms_at_arm" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sms_on_disarm"
                android:id="@+id/sms_at_disarm" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sms_on_wrong_key"
                android:id="@+id/sms_at_wrong_key" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/border">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="6"
                android:id="@+id/new_password_edit"
                android:layout_marginRight="30dp"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/new_password"
                android:id="@+id/new_password_label"
                android:gravity="center"
                android:layout_gravity="center"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>