<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent" android:layout_width="match_parent">

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical">


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temper_control"
            android:id="@+id/tc_checkbox"
            android:layout_margin="10dp" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tc_mode_group"
            android:layout_margin="10dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="6"
                    android:id="@+id/tc_limit_edit" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAacppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tc_limit"
                    android:id="@+id/tc_limit_label"
                    android:gravity="center" />
            </LinearLayout>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tc_growing"
                android:id="@+id/tc_mode_0" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tc_fading"
                android:id="@+id/tc_mode_1" />
        </RadioGroup>

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tc_on_limit_group"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tc_on_limit"
                android:id="@+id/textView"
                android:layout_gravity="center_horizontal" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_sms"
                android:id="@+id/tc_on_limit_1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activate_sound"
                android:id="@+id/tc_on_limit_2" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activate_inner_sound"
                android:id="@+id/tc_on_limit_3" />

        </RadioGroup>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/termostat"
                android:id="@+id/textView2"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAacppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tmin_hint"
                    android:id="@+id/tmin_label"
                    android:gravity="center" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="3"
                    android:id="@+id/tc_min" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAacppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tmax_hint"
                    android:id="@+id/tmax_label"
                    android:gravity="center"
                    android:layout_marginLeft="20dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="3"
                    android:id="@+id/tc_max" />


            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>