<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent" android:layout_width="match_parent">

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/sms_daily_report"
            android:id="@+id/sms_daily_report_text"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/border">

            <com.adonai.contrib.ThreeStateButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/temp_report_switch"
                android:layout_marginRight="30dp"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/temp_report_switch"
                android:id="@+id/temp_report_switch_text"
                android:gravity="center"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/border">

            <com.adonai.contrib.ThreeStateButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/info_report_switch"
                android:layout_marginRight="30dp"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/info_report_switch"
                android:id="@+id/info_report_switch_text"
                android:gravity="center"
                android:layout_gravity="center"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>